# substrate-erc20

./: README.md
substrate-erc20/: Cargo.toml
substrate-erc20/runtime/: Cargo.toml
substrate-erc20/runtime/src/: erc20.rs  lib.rs
substrate-erc20/runtime/wasm/: Cargo.toml  build.sh
substrate-erc20/src/: chain_spec.rs  main.rs
