[dependencies.substrate-erc20-runtime]
default-features = false
path = '..'
[profile.release]
lto = true
panic = 'abort'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'substrate-erc20-runtime-wasm'
version = '1.0.0'

[workspace]
members = []

[lib]
crate-type = ['cdylib']

[features]
default = []
std = ['substrate-erc20-runtime/std']
